# icefabric-archive

./: .gitignore  .pre-commit-config.yaml  .pyiceberg.yaml  NOTICE.txt  README.md  conftest.py  mkdocs.yml  pyproject.toml  subset.sh
.github/workflows/: cicd.yml  pytest.md
app/: __init__.py  main.py
app/routers/hydrofabric/: router.py
app/routers/module_params/: router.py
app/routers/nwm_modules/: router.py
app/routers/ras_xs/: router.py
builds/iceberg/: build_fema_mip.py  build_parameters.py  build_ras_xs.py  build_usgs_streamflow_observations.py
builds/icechunk/: build_landcover_stores.py  convert_to_tif.py  get_envca_cadwr_txdot_gages_from_s3.py  icechunk_testing.py
data/: README.md  all_gages.csv
data/hydrofabric/: ak_hf_upstream_connections.json  gl_hf_upstream_connections.json  hi_hf_upstream_connections.json  prvi_hf_upstream_connections.json
data/module_ipes/: modules.csv  sac_sma_params.csv  snow17_params.csv
docker/: Dockerfile  Dockerfile.api  compose.yaml
docker/martin/: martin_config.yaml
docker/notebook/: docker-compose.yml
docs/: description.md  index.md
docs/datasets/: hydrofabric.md  index.md  ras_xs.md
docs/modules/: index.md  lasam.md  lstm.md  noahowp.md  sacsma.md  sft.md  smp.md  snow17.md  topmodel.md  troute.md
docs/user_guide/: iceberg_table_build.md  icefabric_api.md  icefabric_manage.md  icefabric_tools.md  index.md  terraform.md
examples/: Demo_Iceberg.ipynb  Demo_Verification_TIF_to_xrDataset.ipynb  XS_Mapping_With_IDs_&_Iceberg_Demo.ipynb  __build.ipynb  build.ipynb  build_hf_catalog.ipynb  quick_start.ipynb
examples/geopackage_viewer/: geo_utils.py  geopackage.ipynb  requirements.txt  viewer.ipynb
examples/iceberg/: Demo_Iceberg.ipynb  iceberg_version_control_examples.ipynb  pyiceberg_time_travel.ipynb  pyiceberg_timetravel.ipynb  querying_ras_xs.ipynb  quick_start.ipynb
examples/iceberg_data_viewer/: ras_xs.ipynb  ras_xs_api.ipynb  utils.py  viewer.ipynb
examples/icechunk/: README.icechunk.md  icechunk_data_ret_and_plot.ipynb  icechunk_to_tiff.ipynb  icechunk_version_control_examples.ipynb
examples/icechunk_data_viewer/: README.md  requirements.txt  viewer.ipynb
examples/initial_parameters/: lstm.ipynb  soil_freeze_thaw.ipynb
examples/module_ipes/: modules_ipes.ipynb
examples/ras_xs/: querying.ipynb  ras_xs_example.ipynb
examples/snapshots_timetravel/: pyiceberg.ipynb
scripts/: get_module_parameters.py  gpkg_to_parquet.py  gpkg_to_parquet_all_domains.py
src/icefabric/: __init__.py
src/icefabric_api/: README.md  main.py  pyproject.toml
src/icefabric_api/app/: conftest.py  main.py  test_main.py
src/icefabric_api/app/routers/hydrofabric/: conftest.py  router.py  test_router.py
src/icefabric_api/app/routers/module_params/: router.py
src/icefabric_api/app/routers/streamflow_observations/: conftest.py  router.py  test_router.py
src/icefabric_api/data/: cfe_params.csv  lasam_out.csv  lasam_params.csv  modules.csv  noah_owp_modular_params.csv  sac_sma_params.csv  sft_params.csv  smp_params.csv  snow17_params.csv  topmodel_params.csv  ueb_params.csv
src/icefabric_api/src/: cfe_params.csv  get_module_parameters.py  hf_attributes.py  run_modules.py
src/icefabric_api/src/icefabric_api/: __init__.py  create_ipes.py
src/icefabric_api/tests/: test_hydrofabric_router.py  test_streamflow_observations_router.py
src/icefabric_api/tests/data/: usgs_01010000_data_from_20211231_1400_to_20220101_1400.csv
src/icefabric_manage/: .pyiceberg.yaml  README.md  pyproject.toml
src/icefabric_manage/builds/: README.md  build_fema_ble.py  build_fema_mip.py  build_hydrofabric.py  build_iceberg_bathymetry_ml_auxiliary.py  build_parameters.py  build_usgs_streamflow_observations.py
src/icefabric_manage/scripts/: build_hydrofabric.py  build_usgs_streamflow_observations.py
src/icefabric_manage/src/icefabric_manage/: __init__.py  _api.py  iceberg_table.py  map_fim_data.py
src/icefabric_manage/terraform/: README.md  iceberg_demo.py
src/icefabric_manage/terraform/environments/test/: main.tf  terraform.tfvars  variables.tf
src/icefabric_manage/terraform/modules/iceberg/: main.tf
src/icefabric_tools/: README.md  pyproject.toml
src/icefabric_tools/src/icefabric_tools/: __init__.py  _api.py  rnr.py
src/icefabric_tools/src/icefabric_tools/geo/: geo_utils.py
src/icefabric_tools/src/icefabric_tools/iceberg/: hydrofabric.py  rnr.py  utils.py
src/icefabric_tools/src/icefabric_tools/icechunk/: __init__.py  arch_weather_file_utils.py  icechunk_s3_migration.py  icechunk_s3_module.py  icechunk_testing.py  icechunk_to_tif.py  nc_conv_utils.py  topobathy_ic_to_tif.py
src/icefabric_tools/tests/: conftest.py  test_subset.py  test_utils.py
terraform/: iceberg_demo.py
tests/: README.md  conftest.py  test_subset.py  test_utils.py
tests/app/: test_hydrofabric_router.py  test_module_ipes.py  test_rise_router.py  test_streamflow_observations_router.py  test_topoflow_albedo_router.py  test_xs_router.py
tests/data/: gages-06710385.gpkg  hi_hf_graph_network.json  sample_connections.json  usgs_01010000_data_from_20211231_1400_to_20220101_1400.parquet
tests/hydrofabric/: conftest.py  test_build_graphs.py  test_find_origin.py  test_subset.py
tests/integration/: test_icechunk.py  test_topobathy_icechunk.py
tests/ipes/: test_module_ipes.py
tests/pyiceberg/: conftest.py
tools/hydrofabric/: download_hydrofabric_gpkg.py  download_reference_fabric.py  gpkg_to_parquet.py  hfsubset.py
tools/iceberg/: README.md  build_conus_reference.py  build_fema_ble.py  build_hydrofabric.py  build_iceberg_bathymetry_ml_auxiliary.py  build_ras_xs.py  export_catalog.py  gpkg_to_parquet.py  migrate_catalog.py  update_hydrofabric.py
tools/icechunk/: build_landcover_stores.py  build_topobathy_stores.py  convert_to_tif.py  get_envca_cadwr_txdot_gages_from_s3.py  icechunk_s3_migration.py  icechunk_testing.py  push_or_pull_envca_cadwr_txdot_icechunk.py
tools/ipes/: get_module_parameters.py
tools/pyiceberg/: export_catalog.py  gpkg_to_parquet.py
tools/ras_xs/: gpkg_to_parquet.py
tools/troute/: usbr_data_retrieval.py
(+88 files in other folders)
