[project]
name = "icefabric_api"
version = "2025.6.0"
description = "A FastAPI API for querying apache iceberg tables"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
