[project]
name = "icefabric_manage"
version = "2025.5"
description = "All functionality for creating, updating, and deleting information from the icefabric catalog"
authors = [{ name = "Tadd Bindas", email = "tadd.bindas@ertcorp.com" }]
maintainers = [{ name = "Tadd Bindas", email = "tadd.bindas@ertcorp.com" }]
readme = "README.md"
dependencies = [
  "numpy==2.2.6",
  "fiona==1.10.1",
  "pandas==2.2.3",
  "geopandas==1.0.1",
  "s3fs==2025.5.0",
  "pyarrow==20.0.0",
  "pyiceberg[sql-sqlite]==0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
