[project]
name = "icefabric_tools"
version = "0.1.0"
description = "All functionality for creating, updating, and deleting information from the icefabric catalog"
authors = [{ name = "Tadd Bindas", email = "tadd.bindas@ertcorp.com" }]
maintainers = [{ name = "Tadd Bindas", email = "tadd.bindas@ertcorp.com" }]
readme = "README.md"
dependencies = [
  "numpy==2.2.5",
  "fiona==1.10.1",
  "pandas==2.2.3",
  "cubed-xarray==0.0.7",
  "geopandas==1.0.1",
  "pydantic==2.10.6",
  "xarray==2025.3.1",
  "scipy==1.15.1",
  "tqdm==4.67.1",
  "zarr==3.0.7",
  "sympy==1.13.1",
  "scikit-learn==1.6.1",
  "matplotlib==3.10.0",
  "s3fs==2025.3.2",
  "pyarrow==19.0.1",
  "pyiceberg[sql-sqlite]==0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
