[project]
name = "icefabric_tools"
version = "0.1.0"
description = "All functionality for creating, updating, and deleting information from the icefabric catalog"
authors = [{ name = "Tadd Bindas", email = "tadd.bindas@ertcorp.com" }]
maintainers = [{ name = "Tadd Bindas", email = "tadd.bindas@ertcorp.com" }]
readme = "README.md"
dependencies = [
  "numpy==1.26.3",
  "fiona==1.10.1",
  "pandas==2.2.0",
  "geopandas==1.0.1",
  "matplotlib==3.10.0",
  "s3fs==2025.3.2",
  "pyarrow==19.0.1",
  "pyiceberg[sql-sqlite]==0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
