[project]
name = "icefabric_tools"
version = "2025.5"
description = "All functionality for creating, updating, and deleting information from the icefabric catalog"
authors = [
  { name = "Tadd Bindas", email = "tadd.bindas@ertcorp.com" },
  { name = "Sylvia Chin", email = "sylvia.c.chin@rtx.com" },
  { name = "Daniel Cumpton", email = "dcumpton@rtx.com" },
  { name = "Quercus Hamlin", email = "qhamlin@asrcfederal.com" },
  { name = "Brock Hinkson", email = "brock.w.hinkson@rtx.com" },
]
maintainers = [
  { name = "Tadd Bindas", email = "tadd.bindas@ertcorp.com" },
  { name = "Sylvia Chin", email = "sylvia.c.chin@rtx.com" },
  { name = "Daniel Cumpton", email = "dcumpton@rtx.com" },
  { name = "Quercus Hamlin", email = "qhamlin@asrcfederal.com" },
  { name = "Brock Hinkson", email = "brock.w.hinkson@rtx.com" },
]
readme = "README.md"
dependencies = [
  "numpy==2.2.6",
  "fiona==1.10.1",
  "pandas==2.2.3",
  "geopandas==1.0.1",
  "matplotlib==3.10.3",
  "s3fs==2025.5.0",
  "pyarrow==20.0.0",
  "pyiceberg[sql-sqlite]==0.9.0",
  "xarray==2025.4.0",
  "rioxarray==0.19.0",
  "icechunk==0.2.14",
  "zarr==3.0.8",
  "virtualizarr==1.3.2",
  "tqdm==4.67.1",
  "tifffile==2025.5.21",
  "scipy==1.15.3",
  "kerchunk==0.2.8",
  "h5py==3.13.0",
  "h5netcdf==1.6.1",
  "fsspec==2025.5.0",
  "dask==2025.5.1",
  "netCDF4==1.7.2",
  "python-dotenv==1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
